add methods deleteProductFromCart and updateProductInCarts